src/versions: add wireguard

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,versions.yml,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,versions.yml,wireguard,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -160,9 +160,13 @@ sources=unifdef.c
 
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sendmail; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sendmail; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./wireguard; ./zfs; ./zlib; ./zstd) > versions.yml
 depends=all
 enabled=0
+
+[wireguard]
+type=binary
+sources=wireguard.c
 
 [zfs]
 type=binary
@@ -283,6 +287,9 @@ depends=common.c
 depends=common.c
 
 [unifdef.c]
+depends=common.c
+
+[wireguard.c]
 depends=common.c
 
 [zfs.c]
