src/versions: add kyua

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,versions.yml,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,versions.yml,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -60,6 +60,10 @@ sources=heimdal.c
 [ipfilter]
 type=binary
 sources=ipfilter.c
+
+[kyua]
+type=binary
+sources=kyua.c
 
 [ldns]
 type=binary
@@ -160,7 +164,7 @@ sources=unifdef.c
 
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sendmail; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./wireguard; ./wpa_supplicant; ./zfs; ./zlib; ./zstd) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./kyua; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sendmail; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./wireguard; ./wpa_supplicant; ./zfs; ./zlib; ./zstd) > versions.yml
 depends=all
 enabled=0
 
@@ -225,6 +229,9 @@ depends=common.c
 depends=common.c
 
 [ipfilter.c]
+depends=common.c
+
+[kyua.c]
 depends=common.c
 
 [ldns.c]
