--- a/project.conf
+++ b/project.conf
@@ -2,7 +2,7 @@ vendor=FreeBSD-Foundation
 package=alpha-omega-beach-cleaning
 version=20250922
 
-targets=dependencies.md,format,merge-versions,plan.md,security.md,spdx
+targets=dependencies.md,format,merge-versions,plan.md,security.md,spdx,versions.yml
 subdirs=src
 dist=COPYING,Makefile,README.md,database.yml,tools/spdx.sh
 
@@ -24,7 +24,8 @@ enabled=0
 
 [merge-versions]
 type=command
-command=(cd src/versions && $(MAKE) versions.yml) && yq database.yml src/versions/versions.yml
+command=(yq eval-all 'select(fileIndex == 0) * select(fileindex == 1)' database.yml versions.yml)
+depends=versions.yml
 phony=1
 enabled=0
 
@@ -44,3 +45,9 @@ type=script
 script=./tools/spdx.sh
 enabled=0
 phony=1
+
+[versions.yml]
+type=command
+command=(cd src/versions; echo "Sections:"; ./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./kyua; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sendmail; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./wireguard; ./wpa_supplicant; ./zfs; ./zlib; ./zstd) > versions.yml
+depends=all
+enabled=0
