--- a/project.conf
+++ b/project.conf
@@ -48,6 +48,6 @@ phony=1
 
 [versions.yml]
 type=command
-command=(cd src/versions; echo "Sections:"; ./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./kyua; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sendmail; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./wireguard; ./wpa_supplicant; ./zfs; ./zlib; ./zstd) > versions.yml
+command=(cd src/versions; echo "Sections:"; ./bmake; ./byacc; ./dtc; ./unifdef; ./libc; ./mkuzip; ./acpi; ./ipfilter; ./zfs; ./zstd; ./ldns; ./libpcap; ./dma; ./sendmail; ./unbound; ./wireguard; ./wpa_supplicant; ./tcpdump; ./openssl; ./bsddialog; ./bzip2; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libxo; ./file; ./ncurses; ./sqlite; ./zlib; ./awk; ./bc; ./diff; ./less; ./patch; ./pkg; ./kyua) > versions.yml
 depends=all
 enabled=0
