database.yml: mark libdialog as abandoned
The plan for this dependency is already to forego.

--- a/database.yml
+++ b/database.yml
@@ -543,7 +543,7 @@ Sections:
       - homepage: https://invisible-island.net/dialog/
       - security:
         - user
-      - plan: fix
+      - plan: forego
     libdiff:
       - directory: contrib/libdiff
       - upstream: Game of Trees
