src/versions: add openssh

--- a/project.conf
+++ b/project.conf
@@ -48,6 +48,6 @@ phony=1
 
 [versions.yml]
 type=command
-command=(cd src/versions; echo "Sections:"; ./bmake; ./byacc; ./dtc; ./unifdef; ./libc; ./mkuzip; ./acpi; ./ipfilter; ./zfs; ./zstd; ./ldns; ./libpcap; ./dma; ./sendmail; ./unbound; ./wireguard; ./wpa_supplicant; ./tcpdump; ./openssl; ./bsddialog; ./bzip2; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libxo; ./file; ./ncurses; ./sqlite; ./zlib; ./awk; ./bc; ./diff; ./less; ./patch; ./pkg; ./kyua) > versions.yml
+command=(cd src/versions; echo "Sections:"; ./bmake; ./byacc; ./dtc; ./unifdef; ./libc; ./mkuzip; ./acpi; ./ipfilter; ./zfs; ./zstd; ./ldns; ./libpcap; ./dma; ./openssh; ./sendmail; ./unbound; ./wireguard; ./wpa_supplicant; ./tcpdump; ./openssl; ./bsddialog; ./bzip2; ./flex; ./heimdal; ./libarchive; ./libedit; ./libevent; ./liblzma; ./libxo; ./file; ./ncurses; ./sqlite; ./zlib; ./awk; ./bc; ./diff; ./less; ./patch; ./pkg; ./kyua) > versions.yml
 depends=all
 enabled=0
