--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -127,6 +127,10 @@ sources=mkuzip.c
 [ncurses]
 type=binary
 sources=ncurses.c
+
+[openssh]
+type=binary
+sources=openssh.c
 
 [openssl]
 type=binary
@@ -268,6 +272,9 @@ depends=common.c
 depends=libc.c
 
 [ncurses.c]
+depends=common.c
+
+[openssh.c]
 depends=common.c
 
 [openssl.c]
