src/versions: add lua
This actually calls flua, which in turn depends on Lua.
It may make sense to add flua to the database for clarity.

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,ntp,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,mkuzip,ncurses,ntp,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -119,6 +119,10 @@ sources=libxo.c
 [llvm]
 type=binary
 sources=llvm.c
+
+[lua]
+type=binary
+sources=lua.c
 
 [mkuzip]
 type=binary
@@ -270,6 +274,9 @@ depends=common.c
 depends=common.c
 
 [llvm.c]
+depends=common.c
+
+[lua.c]
 depends=common.c
 
 [mkuzip.c]
