database.yml: register dependency on libcxxrt for ATF

--- a/database.yml
+++ b/database.yml
@@ -854,6 +854,8 @@ Sections:
       - source: https://github.com/FreeBSD/atf
       - security:
         - user
+      - depends:
+        - libcxxrt
       - plan: fork
     capsicum-test:
       - description: Practical capabilities for UNIX
