src/versions: add tzdata

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,mkuzip,ncurses,ntp,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,mkuzip,ncurses,ntp,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -166,6 +166,10 @@ sources=sqlite.c
 type=binary
 sources=tcpdump.c
 
+[tzdata]
+type=binary
+sources=tzdata.c
+
 [unbound]
 type=binary
 sources=unbound.c
@@ -305,6 +309,9 @@ depends=common.c
 
 [tcpdump.c]
 depends=common.c
+
+[tzdata.c]
+depends=tzdata.c
 
 [unbound.c]
 depends=common.c
