--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,mkuzip,ncurses,ntp,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -135,6 +135,10 @@ sources=ncurses.c
 [ntp]
 type=binary
 sources=ntp.c
+
+[openpam]
+type=binary
+sources=openpam.c
 
 [openssh]
 type=binary
@@ -287,6 +291,9 @@ depends=common.c
 depends=libc.c,common.c
 
 [ncurses.c]
+depends=common.c
+
+[openpam.c]
 depends=common.c
 
 [openssh.c]
