--- a/database.yml
+++ b/database.yml
@@ -688,7 +688,7 @@ Sections:
     OpenPAM:
       - description: Open source PAM library that focuses on simplicity, correctness, and cleanliness.
       - directory: contrib/openpam
-      - version: Zingiber
+      - version: 20250531
       - upstream: Dag-Erling Smørgrav
       - homepage: https://openpam.org
       - license: BSD-3-Clause
