--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,lua,lyaml,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -123,6 +123,10 @@ sources=llvm.c
 [lua]
 type=binary
 sources=lua.c
+
+[lyaml]
+type=binary
+sources=lyaml.c
 
 [mkuzip]
 type=binary
@@ -285,6 +289,9 @@ depends=common.c
 depends=common.c
 
 [lua.c]
+depends=common.c
+
+[lyaml.c]
 depends=common.c
 
 [mkuzip.c]
